--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
-<body>
+<body class="blood">
     <div class="container">
         <header class="header">
             <a href="/" class="logo-link">
@@ -40,8 +40,20 @@
                 <p class="hero-desc">В настырном журналисте по-прежнему живет симбиот. Том Харди в образе обаятельного суперзлодея  из комиксов Marvel.</p>
             </div>
             <!-- /.hero-text -->
+            <div class="button-group">
+                <button class="button button-primary">
+                    <img width="15px" src="img/playtrailer.svg" alt="button: play" class="button-icon">
+                    <span class="button-text">смотреть трейлер</span>
+                </button>
+                <a href="trailerfilm.html" class="button button-link">
+                    <img width="15px" src="img/ticketfilm.svg" alt="button: play" class="button-icon">
+                    <span class="button-text">билеты на премьеру</span>
+                </a>
+            </div>
+            <!-- /.button-group -->
         </div>
         <!-- /.hero -->
     </div>
+    <img src="img/Venompicture.png" alt="venom: picture" class="venompicture"/>
 </body>
 </html>
