--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="blood">
     <div class="container">
         <header class="header">
-            <a href="/" class="logo-link">
+            <a href="https://egorbasti.github.io/VENOM-2/" class="logo-link">
               <img width="46" height="71" src="img/logovenom.png" alt="logo: venom" class="logo-image" />
             </a>
             <nav class="nav">
