Добавил адаптацию под мобильные телефоны
+ Добавлены анимации( animation )
+ Был использован JavaScript

--- a/aboutfilm.html
+++ b/aboutfilm.html
@@ -17,6 +17,15 @@
               <img width="46" height="71" src="img/logovenom.png" alt="logo: venom" class="logo-image" />
             </a>
             <nav class="nav">
+                <button class="menu-button">
+                    <span class="menu-button-text">Меню</span>
+                    <img src="img/menu-icon.svg" alt="icon: menu" class="menu-button-icon">
+                </button>
+                <!-- /.menu-button -->
+                <button class="menu-close">
+                    <span class="menu-close-text"></span>
+                    <img src="img/arrow.svg" alt="arrow: right" class="menu-close-icon">
+                </button>
                 <ul class="menu">
                     <li class="menu-item">
                         <a href="aboutfilm.html" class="menu-link">о фильме</a>
@@ -83,5 +92,6 @@
             </div>
         </div>
         <!-- /.content -->
+        <script src="js/main.js"></script>
 </body>
 </html>
